# Merite_api

./: .gitignore  alembic.ini  generate-client.sh  main.py  pyproject.toml  seed_products.py
alembic/: env.py
alembic/versions/: 0e70ab992358_added_new_tables.py  1fa6c4c7b907_create_export_passphrase_notifc_add_new.py  43f36db4372d_add_user_invests_table_and_update_enums.py  7a5ad2668e7f_added_new_tables.py  89771a612a20_create_export_tables.py  f970f97f7e03_add_uppercase_invest_enum_values.py
app/: __init__.py  config.py  models.py  notification_service.py  schemas.py  utils.py
app/routers/: admin.py  auth.py  exportdata.py  gifts.py  invests.py  loans.py  notifications.py  offers.py  passphrase.py  payments.py  products.py  reproducts.py  sell_airtime.py  users.py  wallet.py
